--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         <!-- Модальные окна для увеличения изображений -->
         <div id="img1" class="modal">
-            <img src="https://via.placeholder.com/300x200?text=Ковер+1" alt="Ковер 1">
+            <img src="photo1653028813.jpeg" alt="Ковер 1">
         </div>
         <div id="img2" class="modal">
             <img src="https://via.placeholder.com/300x200?text=Ковер+2" alt="Ковер 2">
